--- a/src/view/res/main_panes.fxml
+++ b/src/view/res/main_panes.fxml
@@ -2,11 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -24,8 +22,6 @@
       </AnchorPane>
       <AnchorPane fx:id="settingsAnchorPane" layoutY="409.0" prefHeight="303.0" prefWidth="601.0">
          <children>
-            <TextField fx:id="initialBatteryTextView" disable="true" layoutX="537.0" layoutY="110.0" prefHeight="26.0" prefWidth="52.0" promptText="100%" />
-            <Label fx:id="initialBatteryLabel" disable="true" layoutX="414.0" layoutY="114.0" text="Initial Battery:" />
 
                         
              <ToggleButton fx:id="riverToggleButton" layoutX="2.0" layoutY="5.0" selected="false" text="River">
@@ -37,10 +33,6 @@
             <ToggleButton fx:id="droneToggleButton" layoutX="209.0" layoutY="5.0" text="Drone">
 
             </ToggleButton>
-            <TextField fx:id="consumptionPerBlockTextView" disable="true" layoutX="531.0" layoutY="38.0" prefHeight="26.0" prefWidth="58.0" promptText="100%" />
-            <Label fx:id="consumptionPerBlockLabel" disable="true" layoutX="314.0" layoutY="43.0" text="Battery consumption per block:" />
-            <TextField fx:id="consumptionPerSecondTextView" disable="true" layoutX="531.0" layoutY="74.0" prefHeight="26.0" prefWidth="58.0" promptText="&gt;=60%" />
-            <Label fx:id="consumptionPerSecondLabel" disable="true" layoutX="304.0" layoutY="79.0" text="Battery consumption per seconds:" />
             <!--<RadioButton fx:id="trueBadConnectionRadioButton" disable="true" layoutX="486.0" layoutY="150.0" mnemonicParsing="false" text="Yes" />
             <RadioButton fx:id="noBadConnectionRadioButton" disable="true" layoutX="543.0" layoutY="150.0" mnemonicParsing="false" selected="true" text="No" />-->
            <!-- <RadioButton fx:id="randomBadConnectionRadioButton" disable="true" layoutX="521.0" layoutY="151.0" mnemonicParsing="false" text="Random" />-->
@@ -49,11 +41,6 @@
             <RadioButton fx:id="noStrongWindRadioButton" layoutX="141.0" layoutY="162.0" mnemonicParsing="false" selected="true" text="No" />
             <RadioButton fx:id="randomStrongWindRadioButton" layoutX="186.0" layoutY="162.0" mnemonicParsing="false" text="Random" />
             <Label fx:id="strongWindLabel" layoutX="4.0" layoutY="161.0" text="Strong Wind:" />
-            <Label fx:id="currentDroneLabel" disable="true" layoutX="391.0" layoutY="15.0" text="Current Drone (ID):" />
-            <TextField fx:id="currentDroneTextField" disable="true" layoutX="531.0" layoutY="9.0" prefHeight="26.0" prefWidth="58.0" text="0" />
-            <Button fx:id="saveButton" disable="true" layoutX="541.0" layoutY="204.0" mnemonicParsing="false" text="Save" />
-            <Line endX="-33.0" endY="-16.0" layoutX="303.0" layoutY="20.0" startX="-33.0" startY="214.0" />
-            <Line endX="287.0" endY="241.5" layoutX="313.0" layoutY="-7.0" startX="-43.5" startY="241.5" />
             <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="76.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@hospital.png" />
@@ -71,21 +58,17 @@
                   <Image url="@antenna.png" />
                </image>
             </ImageView>
-           <!-- <CheckBox fx:id="wrapperCheckBox" disable="true" layoutX="505.0" layoutY="155.0" mnemonicParsing="false" text="Wrapper" />-->
-            <ComboBox fx:id="sourceComboBox" disable="true" layoutX="324.0" layoutY="204.0" prefHeight="26.0" prefWidth="66.0" />
-            <ComboBox fx:id="targetComboBox" disable="true" layoutX="447.0" layoutY="204.0" prefHeight="26.0" prefWidth="66.0" />
-            <Label fx:id="sourceLabel" disable="true" layoutX="272.0" layoutY="209.0" text="Source:" />
-            <Label fx:id="targetLabel" disable="true" layoutX="396.0" layoutY="209.0" text="Target:" />
             <Button fx:id="deleteButton" layoutX="4.0" layoutY="192.0" mnemonicParsing="false" text="Delete" />
             <Button fx:id="cleanButton" layoutX="68.0" layoutY="192.0" mnemonicParsing="false" text="Clean" />
-            <ComboBox fx:id="wrapperComboBox" disable="true" layoutX="438.0" layoutY="158.0" prefWidth="150.0" promptText="None" />
-            <Label fx:id="wrapperLabel" disable="true" layoutX="377.0" layoutY="163.0" text="Wrapper:" />
             <ToggleButton fx:id="boatToggleButton" layoutX="2.0" layoutY="84.0" selected="false" text="Boat" />
             <ImageView layoutX="9.0" layoutY="116.0">
                <image>
                   <Image url="@boat.png" />
                </image>
             </ImageView>
+            <Line endX="-34.0" endY="-23.0" layoutX="301.0" layoutY="28.0" startX="-34.0" startY="205.20709228515625" />
+            <Line endX="281.0" endY="241.70709228515625" layoutX="322.0" layoutY="-9.0" startX="-54.29290771484375" startY="241.70709228515625" />
+            <AnchorPane fx:id="defaultPanelSettingsAnchorPane" layoutX="269.0" layoutY="4.0" maxHeight="242.0" maxWidth="337.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="227.0" prefWidth="336.0" />
 
                         
                                  </children>
